--- a/intermediate_css/fonts.html
+++ b/intermediate_css/fonts.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css" type="text:css">
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Fonts Demo Page</h1>
-    <p> The Web Developer Bootcamp</p>
     
+    <h1>Fonts Demo Page</h1>
+    
+    <p>
+        Many video sites <span>recommend videos</span> related to the one a user is watching. 
+        These recommendations have been shown to influence what users end up exploring and are an important part of a recommender system. 
+        Plenty of methods have been proposed to recommend related videos, but there has been relatively little work that compares competing strategies. We describe a field study of related video recommendations, where we deploy algorithms to recommend related movie trailers. Our results show that recency- and similarity-based algorithms yield the highest click-through rates, and that the recency-based algorithm leads to the most trailer-level engagement. 
+        Our findings suggest the potential to design non-personalized yet effective related item recommendation strategies.
+    </p>
+
+    <p>
+        <a href="https://www.cssfontstack.com">CSS Font Stack</a>
+    </p>
+
 </body>
 </html>
